# kinematic

./: .gitignore  CLAUDE.md  OVERVIEW.md  WORKPLAN.md  pyproject.toml
configs/: base.yaml  inference.yaml  train_equilibrium.yaml
scripts/: download_data.py  estimate_memory.py  generate.py  precompute_trunk.py  preprocess_atlas.py  preprocess_cath.py  preprocess_common.py  preprocess_dd13m.py  preprocess_mdposit.py  preprocess_megasim.py  preprocess_misato.py  preprocess_octapeptides.py  run_curriculum.py  train.py
src/boltzkinema/data/: __init__.py  collator.py  dataset.py  noise_masking.py
src/boltzkinema/evaluation/: __init__.py  metrics.py
src/boltzkinema/inference/: sampler.py
src/boltzkinema/model/: __init__.py  boltzkinema.py  diffusion_module.py  spatial_temporal_atom.py  spatial_temporal_transformer.py  temporal_attention.py  weight_loading.py
src/boltzkinema/training/: __init__.py  losses.py  trainer.py
src/kinematic/: __init__.py  __main__.py
src/kinematic/cli/: __init__.py  _config.py  download.py  train.py
src/kinematic/data/: __init__.py  collator.py  dataset.py  download.py  noise_masking.py  precompute_trunk.py  preprocessing.py  trunk_cache.py  units.py
src/kinematic/evaluation/: __init__.py  metrics.py
src/kinematic/inference/: __init__.py  hierarchical.py  sampler.py  (+1 more)
tests/: test_checkpoint_io.py  test_cli.py  test_collator.py  test_config_compose.py  test_dataset.py  test_losses.py  test_metrics.py  test_noise_masking.py  test_sampler.py  test_shapes.py  test_single_frame_equivalence.py  test_temporal_attention.py  test_units.py
(+12 files in other folders)
