[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinematic"
version = "0.1.0"
description = "Diffusion-based biomolecular trajectory generation using Boltz-2"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "boltz",
    "torch>=2.1",
    "accelerate>=0.25",
    "wandb",
    "omegaconf",
    "mdanalysis",
    "mdtraj",
    "h5py",
    "numpy",
    "scipy",
    "biopython",
    "rdkit",
    "einops",
    "click>=8.1",
    "hydra-core>=1.3",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
kinematic = "kinematic.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
